karpenter-mpol/add-karpenter-daemonset-priority-class/.kyverno-test/daemonset.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: test
  namespace: test
spec:
  selector:
    matchLabels:
      k8s-app: test
  template:
    metadata:
      labels:
        k8s-app: test
    spec:
      containers:
        - name: test
          image: test/test:latest
