karpenter-mpol/add-karpenter-daemonset-priority-class/.kyverno-test/exception-resource.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: exception-daemonset
spec:
  selector:
    matchLabels: {app: exception}
  template:
    metadata:
      labels: {app: exception}
    spec:
      containers:
      - name: app
        image: busybox:1.36
