karpenter-mpol/add-karpenter-daemonset-priority-class/.kyverno-test/kyverno-test.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: test-add-karpenter-daemonset-priority-class
policies:
- ../add-karpenter-daemonset-priority-class.yaml
resources:
- daemonset.yaml
- exception-resource.yaml
exceptions:
- exceptions.yaml
results:
- kind: DaemonSet
  patchedResources: daemonset-patched.yaml
  policy: add-karpenter-daemonset-priority-class
  resources:
  - test/test
  result: pass
  isMutatingPolicy: true
- kind: DaemonSet
  policy: add-karpenter-daemonset-priority-class
  resources:
  - exception-daemonset
  result: skip
  isMutatingPolicy: true
